Jan 17, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add g_gear flags of Urban Terror 3.2

Jan 15, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Update danish translation (Morten Brix Pedersen)
- Update german translation

Jan 14, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- fix GTK2 application icon

Jan 12, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add support for BF1942 (wine game). Uses EYE protocol, no official master,
  LAN browsing doesn't work.
- load game icons by name via dlsym to reduce number of c&p operations when
  adding new games
- renamed "pix" tag in xml to "icon"
- use config_is_valid_generic for ET

Jan 08, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- move struct games into games.c which is now generated from games.xml by
  gamesxml2c
- don't pass tribes2 name if empty
- add --dontlaunch parameter for internal use
- add exec function to hexenworld (anyone ever played that game??)
- make sof2 master protcol configurable
- support password on savage servers. Thanks Andreas Schneider for reporting.

Jan 07, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- check props pointer before dereferencing it ...

Jan 05, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- added comment and "this server sucks" properties for servers

Jan 02, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add lan masters per default
- fix lan browsing for Americas Army

Jan 01, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- remove multiplay.co.uk AA master
- fix some function prototypes
- --add command line option to just add a server to favorites without launching
  a game

Dec 27, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- added support for postal2, no master.

Dec 18, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- fix LAN browsing. Only worked by luck.

Dec 15, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- fix crash caused by wrong reference counting of uservers