@@ -1,3 +1,6 @@
+ABOUT-NLS
+COPYING
+INSTALL
 Makefile.in
 Makefile
 aclocal.m4
@@ -5,11 +8,17 @@ autom4te.cache
 configure
 config.cache
 config.log
-config.status
-libtool
-xqf.spec
-ABOUT-NLS
 config.rpath
+config.status
 intl
+intltool-extract.in
+intltool-merge.in
+intltool-update.in
+intltool-extract
+intltool-merge
+intltool-update
+libtool
 m4
 mkinstalldirs
+xqf.spec
+xqf.desktop
