@@ -1,0 +1,11 @@
+[Desktop Entry]
+Encoding=UTF-8
+_Name=XQF
+_GenericName=Game browser
+_Comment=Game browser for X
+Exec=xqf
+Icon=xqf_32x32.png
+StartupNotify=true
+Terminal=false
+Type=Application
+Categories=Application;Game;Arcade;
